# cydia-source-dumper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: cmd.rs  hash.rs  main.rs  util.rs
